--- a/style.css
+++ b/style.css
@@ -37,11 +37,11 @@ header{
 }
 
 .logo{
-    color: #fff;
-    font-size: 30px;
-    font-weight: 600;
+    color: #84405f;;
+    font-size: 35px;
+    font-weight: 900;
     letter-spacing: 1px;
-    padding-right: 5px;
+    margin-right: 50px;
 }
 
 .navBar{
@@ -109,7 +109,7 @@ section{
 
 
 .home-img{
-    width: 1000px;
+    width: 900px;
     height: 730px;
 }
 
