--- a/style.css
+++ b/style.css
@@ -184,6 +184,7 @@ section{
     transition: all .5s ease-in-out;
 }
 
+/* About Section */
 .about{
     width: 100%;
     padding: 100px 0px;
@@ -249,5 +250,76 @@ section{
     
 }
 
+/* Experience Section */
 
+.container{
+    margin: 0 auto;
+    max-width: 1080px;
+    width: 90%;
+}
+
+.experience-p{
+    text-align: center;
+    font-size: 20px;
+    margin-top: 70px;
+}
+
+.experience-h1{
+    text-align: center;
+    font-size: 50px;
+    margin-bottom: 40px;
+    font-weight: 700;
+    color: #bc4578;
+}
+
+.experience-container{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 25px;
+}
+
+.experience-box{
+    border: 2px solid #646d9b;
+    border-radius: 30px;
+    padding: 25px;
+    margin-bottom: 30px;
+}
+
+.experience-box h2{
+    font-size: 30px;
+    font-weight: 600;
+    margin-top: 15px;
+    margin-bottom: 25px;
+    text-align: center;
+}
+
+.experience{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 25px;
+}
+
+.exp{
+    display: flex;
+    align-items: center;
+    gap: 25px;
+    margin-bottom: 15px;
+}
+
+.exp img{
+    width: 32px;
+    height: auto;
+}
+
+.exp p{
+   
+    font-weight: 600;
+    color: #bc4578;
+}
+
+.exp img:hover{
+    
+    transform: translateY(-5px) scale(1.1);
+    transition: all .5s ease-in-out;
+}
 
