--- a/style.css
+++ b/style.css
@@ -323,3 +323,95 @@ section{
     transition: all .5s ease-in-out;
 }
 
+/* projects styling */
+
+.project-action{
+    margin-top: 40px;
+    display: flex;
+    gap: 20px;
+    justify-content: center;
+    margin-bottom: 15px;
+}
+
+.btn-1{
+    border: 1px solid #646d9b;
+    background-color: #5e2f44;
+    width: 140px;
+    padding: 1em 2em ;
+    border-radius: 30px;
+    color: rgb(243, 233, 233);
+    font-size: 14px;
+    font-weight: 600; 
+    text-align: center;
+}
+
+.btn-2{
+    background-color: #646d9b;
+    padding: 1em 2em ;
+    border-radius: 30px;
+    width: 140px;
+    color: white;
+    text-align: center;
+}
+
+.btn-1:hover{
+    background-color: #646d9b;
+    color: white;
+    transform: translateY(-5px) scale(1.1);
+    transition: all .5s ease-in-out;
+}
+
+.btn-2:hover{
+    background-color: #5e2f44;
+    transform: translateY(-5px) scale(1.1);
+    transition: all .5s ease-in-out;
+}
+
+
+
+.project-container{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    gap: 25px;
+    text-align: center;
+    margin-bottom: 50px;
+}
+
+.project{
+    border: 2px solid #646d9b;
+    border-radius: 30px;
+    padding: 25px;
+    margin-bottom: 30px;
+}
+
+.project img{
+    width: 100%;
+    height: 50%;
+    border-radius: 10px;
+    margin-bottom: 20px;
+}
+
+.project h3{
+    font-size: 20px;
+    font-weight: 600;
+    margin-top: 15px;
+    margin-bottom: 25px;
+    text-align: center;
+    color: #bc4578;
+}
+
+.project p{
+    font-size: 16px;
+    font-weight: 600;
+    color: #4f577c;
+    margin-bottom: 40px;
+    margin-right: 15px;
+    line-height: 30px;
+    letter-spacing: 1px;
+    align-items: right;
+    
+}
+
+
+
+
