--- a/style.css
+++ b/style.css
@@ -413,5 +413,112 @@ section{
 }
 
 
+/* publications styling */
+
+.publication-action{
+    margin-top: 40px;
+    display: flex;
+    gap: 20px;
+    justify-content: center;
+    margin-bottom: 15px;
+}
+
+.publication-container{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 25px;
+    text-align: center;
+    margin-bottom: 50px;
+}
+
+.publication{
+    margin-top: 50px;
+    border: 2px solid #646d9b;
+    border-radius: 30px;
+    padding: 25px;
+    margin-bottom: 30px;
+    
+}
+
+.publication img{
+    margin-top: 20px;
+    width: 100%;
+    height: 50%;
+    border-radius: 10px;
+    margin-bottom: 10px;
+}
+
+.publication p{
+    font-size: 16px;
+    font-weight: 600;
+    color: #4f577c;
+    margin-bottom: 40px;
+    margin-right: 15px;
+    line-height: 30px;
+    letter-spacing: 1px;
+    align-items: right;
+}
+
+
+/* contact styling */
+
+.contact-container{
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    margin-top: 20px;
+    border: 1px solid #646d9b;
+    border-radius: 30px;
+
+
+    
+}
+
+.contact-icon{
+    margin-top: 10px;
+    display: flex;
+    align-items: center;
+    gap: 20px;
+    margin-bottom: 10px;
+}
+
+.contact-icon a img{
+    display: inline-block;
+    background-color: #3f4869;
+    font-size: 20px;
+    font-weight: 600;
+    margin-right: 20px;
+    transition: .5s;
+    align-items: center;
+    height: 55px;
+    width: 55px ;
+    border-radius: 50%;
+    border: 2px solid #6c78b4;
+    justify-content: center;
+    padding: 10px;
+    box-shadow: 0px 5px 15px rgba(95, 88, 168, 0.2);
+    margin: 0 15px;
+}
+
+.contact-icon a img:hover{
+    background-color: #5e2f44;
+    transform: translateY(-5px) scale(1.1);
+    transition: all .5s ease-in-out;
+}
+
+
+
+
+
+/* footer styling */
+
+footer{
+    background-color: transparent;
+    color: #4f577c;
+    font-weight: 700;
+    padding: 50px 0;
+    text-align: center;
+}
+
 
 
